// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slide toggle: should render a checked state 1`] = `
<label
  className="root"
  htmlFor="testToggle"
>
  <div
    className="switch"
  >
    <input
      aria-label="Test toggle"
      checked={true}
      className="input"
      id="testToggle"
      type="checkbox"
    />
    <div
      className="slider"
    >
      <div
        className="slideButton"
      >
        <TickIcon
          className="icon"
          svgClassName="svg"
        />
      </div>
    </div>
    <Text
      className="label labelRight"
      raw={true}
    >
      Test toggle
    </Text>
  </div>
</label>
`;

exports[`Slide toggle: should render with default props 1`] = `
<label
  className="root"
  htmlFor="testToggle"
>
  <div
    className="switch"
  >
    <input
      aria-label="Test toggle"
      className="input"
      id="testToggle"
      type="checkbox"
    />
    <div
      className="slider"
    >
      <div
        className="slideButton"
      >
        <TickIcon
          className="icon"
          svgClassName="svg"
        />
      </div>
    </div>
    <Text
      className="label labelRight"
      raw={true}
    >
      Test toggle
    </Text>
  </div>
</label>
`;

exports[`Slide toggle: should render with the label hidden 1`] = `
<label
  className="root"
  htmlFor="testToggle"
>
  <div
    className="switch"
  >
    <input
      aria-label="Test toggle"
      className="input"
      id="testToggle"
      type="checkbox"
    />
    <div
      className="slider"
    >
      <div
        className="slideButton"
      >
        <TickIcon
          className="icon"
          svgClassName="svg"
        />
      </div>
    </div>
  </div>
</label>
`;

exports[`Slide toggle: should render with the label on the left 1`] = `
<label
  className="root"
  htmlFor="testToggle"
>
  <div
    className="switch"
  >
    <input
      aria-label="Test toggle"
      className="input inputLeft"
      id="testToggle"
      type="checkbox"
    />
    <Text
      className="label labelLeft"
      raw={true}
    >
      Test toggle
    </Text>
    <div
      className="slider"
    >
      <div
        className="slideButton"
      >
        <TickIcon
          className="icon"
          svgClassName="svg"
        />
      </div>
    </div>
  </div>
</label>
`;
